--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body, html, #wrapper, .container {
 }
 
 .inner {
+  touch-action: none;
   transform: scale(1.2) translateX(38px) translateY(83px) perspective(279px) rotateX(353deg) rotateY(3deg) scaleZ(1) rotateZ(342deg) translateZ(0px);
 }
 
