--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,24 @@ body, html, #wrapper, .container {
   width: 100%;
 }
 
+pre.hljs {
+  background: none;
+}
+
 .fx {
-  background: #F0F0F0;
+  background: darkslategray;
+}
+
+.fx .vignette {
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
 }
 
 .section {
