Fixed reference to update_fields_with_params().

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   animation: none;
 }
 
-body, html, #wrapper, .container {
+body, html, #wrapper {
   position: absolute;
   overflow: hidden;
   height: 100%;
