--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@
 .inner {
   transition: none;
   animation: none;
+  background-color: lightslategrey;
+}
+
+body {
+  background-color: black;
 }
 
 body, html, #wrapper {
