--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
-@import 'https://fonts.googleapis.com/css?family=Share+Tech+Mono';
+@import 'https://fonts.googleapis.com/css?family=Share+Tech+Mono|Cousine';
 
-#custom * {
+* {
+  font-family: 'Cousine', monospace;
+}
+
+.info * {
   font-family: 'Share Tech Mono', monospace;
 }
 
 .inner {
   transition: none;
   animation: none;
-  background-color: lightslategrey;
+  background-color: #f8eec4;
 }
 
 body {
@@ -52,9 +56,32 @@ pre.hljs {
   touch-action: none;
 }
 
+/* tiltshift styles */
+
+.code.tilt-elegant {
+  -webkit-mask-box-image: linear-gradient(transparent 0%, black 30%, black 50%, black 70%, transparent 100%);
+}
+
+.code-overlay.tilt-elegant {
+  display: block;
+  filter: blur(2px);
+  -webkit-mask-box-image: linear-gradient(black 0%, transparent 50%, black 100%);
+}
+
+.code.tilt-extreme {
+  -webkit-mask-box-image: linear-gradient(transparent 0%, black 50%, transparent 100%);
+}
+
+.code-overlay.tilt-extreme {
+  display: block;
+  filter: blur(4px);
+  -webkit-mask-box-image: linear-gradient(black 0%, transparent 40%, black 100%);
+}
+
 .code-overlay {
+  display: none;
   position: absolute;
-  top: 0;
+  top: -1em;
   left: 0;
   background: none;
   pointer-events: none;
