--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
   font-style: italic;
 }
 @import url(https://cdn.rawgit.com/tonsky/FiraCode/1.205/distr/fira_code.css);
+@import url('https://fonts.googleapis.com/css?effect=anaglyph|brick-sign');
 
 :root {
   --bg: cornsilk;
@@ -19,13 +20,8 @@
 
 * {
   font-family: 'Fira Code iScript', monospace;
-}
-
-.inner {
   transition: none;
   animation: none;
-  background-color: var(--bg);
-  font-size: var(--fontsize);
 }
 
 body, html, #wrapper {
@@ -33,6 +29,19 @@ body, html, #wrapper {
   overflow: hidden;
   height: 100%;
   width: 100%;
+}
+
+.inner {
+  display: table;
+  transform-origin: center;
+  perspective-origin: center;
+  margin: auto;
+  padding: 60%;
+  touch-action: none;
+  transition: none;
+  animation: none;
+  background-color: var(--bg);
+  font-size: var(--fontsize);
 }
 
 pre.hljs {
@@ -58,38 +67,33 @@ pre.hljs {
 .section {
   width: 800px;
   margin: auto;
-  border: 2px solid rgba(0,0,0,0) !important;
+  padding: 0em;
+  border-width: 1em;
+  border-style: solid;
+  border-color: rgba(0,0,0,0);
 }
 
 .section:hover {
-  border: 2px solid rgba(0,0,0,0.1) !important;
-}
-
-.inner {
-  margin: auto;
-  padding: 60%;
-  touch-action: none;
-  transform-origin: center;
-  perspective-origin: center;
+  border-color: rgba(0,0,0,0.1);
 }
 
 /* tiltshift styles */
 
-.code.tilt-elegant {
+.code.tiltshift-elegant {
   -webkit-mask-box-image: linear-gradient(transparent 0%, black 30%, black 50%, black 70%, transparent 100%);
 }
 
-.code-overlay.tilt-elegant {
+.code-overlay.tiltshift-elegant {
   display: block;
   filter: blur(2px);
   -webkit-mask-box-image: linear-gradient(black 0%, transparent 50%, black 100%);
 }
 
-.code.tilt-extreme {
+.code.tiltshift-extreme {
   -webkit-mask-box-image: linear-gradient(transparent 0%, black 50%, transparent 100%);
 }
 
-.code-overlay.tilt-extreme {
+.code-overlay.tiltshift-extreme {
   display: block;
   filter: blur(4px);
   -webkit-mask-box-image: linear-gradient(black 0%, transparent 40%, black 100%);
