--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,26 @@
 @font-face{
   font-family: 'Fira Code iScript';
-  src: url('https://cdn.rawgit.com/kencrocken/FiraCodeiScript/master/FiraCodeiScript-Regular.ttf') format('truetype');
+  src: url('//cdn.rawgit.com/kencrocken/FiraCodeiScript/master/FiraCodeiScript-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 @font-face{
   font-family: 'Fira Code iScript';
-  src: url('https://cdn.rawgit.com/kencrocken/FiraCodeiScript/master/FiraCodeiScript-Italic.ttf') format('truetype');
+  src: url('//cdn.rawgit.com/kencrocken/FiraCodeiScript/master/FiraCodeiScript-Italic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
-@import url(https://cdn.rawgit.com/tonsky/FiraCode/1.205/distr/fira_code.css);
-@import url('https://fonts.googleapis.com/css?effect=anaglyph|brick-sign');
+@import url('//cdn.rawgit.com/tonsky/FiraCode/1.205/distr/fira_code.css');
+@import url('//fonts.googleapis.com/css?effect=anaglyph|brick-sign');
 
 :root {
   --bg: cornsilk;
   --fontsize: 100%;
+  --font: 'Fira Code iScript', monospace;
+}
+
+.inner .section * {
+  font-family: var(--font);
 }
 
 * {
@@ -68,13 +73,6 @@ pre.hljs {
   width: 800px;
   margin: auto;
   padding: 0em;
-  border-width: 1em;
-  border-style: solid;
-  border-color: rgba(0,0,0,0);
-}
-
-.section:hover {
-  border-color: rgba(0,0,0,0.1);
 }
 
 /* tiltshift styles */
