--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,57 @@
 
 :root {
   --bg: cornsilk;
-  --fontsize: 100%;
+  --color: black;
   --font: 'Fira Code iScript', monospace;
+  --fontsize: 100%;
+
+  --width: 60em;
+  --padding: 0em;
+
+  --brightness: 1;
+  --contrast: 100%;
+  --grayscale: 0%;
+  --hue-rotate: 0deg;
+  --invert: 0%;
+  --saturate: 0%;
+  --sepia: 0%;
+  --blur: 0px;
+
+  --scale: 1.0;
+  --perspective: 1500px;
+  --rotateX: 0deg;
+  --rotateY: 0deg;
+  --rotateZ: 0deg;
+  --translateZ: 0px;
+  --hid-translateX: 0px;
+  --hid-translateY: 0px;
+}
+
+#custom .section .content {
+  width: var(--width);
+  color: var(--color);
+  display: block;
+}
+
+#custom .section {
+  display: table;
+  height: 25em;
+  padding: var(--padding);
+  margin: auto;
+}
+
+.inner {
+  transform:
+    scale(var(--scale))
+    perspective(var(--perspective))
+    rotateX(var(--rotateX))
+    rotateY(var(--rotateY))
+    rotateZ(var(--rotateZ))
+    translateZ(var(--translateZ))
+    translateX(var(--hid-translateX))
+    translateY(var(--hid-translateY));
+  transform-origin: center;
+  perspective-origin: center;
 }
 
 .inner .section * {
@@ -55,6 +104,19 @@ pre.hljs {
 
 .fx {
   background: darkslategray;
+  filter:
+    brightness(var(--brightness))
+    contrast(var(--contrast))
+    grayscale(var(--grayscale))
+    hue-rotate(var(--hue-rotate))
+    invert(var(--invert))
+    saturate(var(--saturate))
+    sepia(var(--sepia))
+    blur(var(--blur));
+}
+
+.fx.svg {
+  filter: url(#f006);
 }
 
 .fx .vignette {
@@ -67,12 +129,6 @@ pre.hljs {
   height: 100%;
   width: 100%;
   background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
-}
-
-.section {
-  width: 800px;
-  margin: auto;
-  padding: 0em;
 }
 
 /* tiltshift styles */
