--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@
 
   --scale: 1.0;
   --perspective: 1500px;
+  --originX: 50%;
+  --originY: 50%;
   --rotateX: 0deg;
   --rotateY: 0deg;
   --rotateZ: 0deg;
@@ -64,7 +66,7 @@
     translateZ(var(--translateZ))
     translateX(var(--hid-translateX))
     translateY(var(--hid-translateY));
-  transform-origin: center;
+  transform-origin: var(--originX) var(--originY);
   perspective-origin: center;
 }
 
@@ -87,8 +89,6 @@ body, html, #wrapper {
 
 .inner {
   display: table;
-  transform-origin: center;
-  perspective-origin: center;
   margin: auto;
   padding: 60%;
   touch-action: none;
